feat: lista ganhps
