# src/docs/swagger.yaml
@@ -125,6 +125,40 @@ paths:
       summary: Cria um novo gasto
       tags:
       - Gastos
+  /ganhos/:
+    get:
+      consumes:
+      - application/json
+      description: Fetches a ganho record based List
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ganho retrieved successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid ID format
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Ganho not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Retrieve a ganho list
+      tags:
+      - Ganhos
   /ganhos/{id}:
     get:
       consumes:
